# listen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
Bruno/: bruno.json  collection.bru  createTest.bru  getTests.bru  login.bru  register.bru  uploadAudio.bru
analysis/: Dockerfile  README.md  __main__.py  pyproject.toml
analysis/analysis/: controller.py  data_class.py  main.py  service.py
analysis/speech_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
analysis/tests/: test_service.py
backend/: Dockerfile  build.gradle
backend/src/main/resources/: application.properties
backend/src/test/: test.http
data/: Dockerfile  init.sql
frontend/: .env  .prettierrc  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  server.js  vite.config.ts
frontend/public/.comments/: soup.jpeg.xml
frontend/src/: App.tsx  index.css  main.tsx  utils.ts
frontend/src/assets/: utils.ts
frontend/src/auth/: Auth.ts  AuthContext.tsx
frontend/src/components/: Login.tsx
frontend/src/components/caseload/: Caseload.css  Caseload.tsx
frontend/src/components/contact/: Contact.css  Contact.tsx
frontend/src/components/header/: Header.css  Header.tsx
frontend/src/components/home/: Home.css  Home.tsx
frontend/src/components/login/: Login.css  Login.tsx
frontend/src/components/record/: Record.tsx
frontend/src/components/shopping-cart/: ShoppingCartIcon.tsx
frontend/src/components/slide-content/: SlideContent.tsx
frontend/src/components/test-results/: Test-Results.css  Test-Results.tsx
(+46 files in other folders)
