[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-analysis"
version = "0.1.0"
description = "Speech analysis service with REST API"
readme = "README.md"
authors = [
    {name = "Developer", email = "example@example.com"}
]
requires-python = ">=3.7"
dependencies = [
    "fastapi",
    "nltk",
    "librosa",
    "torch",
    "transformers",
    "soundfile",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]